# tombstone

./: .gitignore  CHANGELOG.md  NOTICE  POST_V01.md  README.md  pyproject.toml
MEMORY/WORK/20260526-115018_tombstone-v01/: PRD.md
src/tombstone/: __init__.py  allowlist.py  cli.py  confidence.py  extra_patterns.py  github_org.py  patterns.py  report.py  scanner.py  scope.py  severity.py  workflow.py
tests/: build_fixtures.py  conftest.py  test_allowlist.py  test_author.py  test_commit_metadata.py  test_committer.py  test_confidence.py  test_date_range.py  test_github_org.py  test_incremental.py  test_liveness.py  test_output_file.py  test_parallel.py  test_patterns.py  test_sarif.py  test_scanner.py  test_scope.py  test_severity.py  test_smoke.py  test_wheel_ship_gate.py  test_workflow.py  test_worktree.py
tests/fixtures/: scope.txt
