[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tombstone"
version = "1.0.0"
description = "Offensive-side credential extraction for bug-bounty engagements"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bugsy Hewitt" }]
keywords = ["security", "bug-bounty", "credential-scanning", "offensive-security"]
dependencies = [
    "gitpython>=3.1",
    "necromancer-patterns @ git+https://github.com/bugsyhewitt/necromancer-patterns@0d93e7d",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tombstone = "tombstone.cli:main"

[project.urls]
Homepage = "https://github.com/bugsyhewitt/tombstone"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ship_gate: v0.1 release ship-gate (slow; runs build + fresh venv install + end-to-end)",
]
